# wikidata_bib

./: --no-clobber  .gitignore  .readthedocs.yml  LICENSE  README.md  check_scispacy.py  code  config.yaml  drop_last  drop_last.py  get_all_notes.ipynb  get_pdf.py  grep_and_open  grep_and_open.py  grep_and_open.sh  has_notes  index.html  index.md  index.yaml  last_day.html  log_notes_in.py  metadata.yaml  mkdocs.yml  notes.html  play_with_scispacy.ipynb  pop  pre_pop  prepare_dashboard.ipynb  pyproject.toml  quali_phd  read.csv  read.ttl  read_in  read_paper.py  reopen_last  reopen_last.py  requirements.txt  setup.cfg  technotype  test.html  (+12 more)
.ipynb_checkpoints/: in_collection-checkpoint  organize_notes-checkpoint.ipynb  play_with_scispacy-checkpoint.ipynb  prepare_dashboard-checkpoint.ipynb  read-checkpoint.csv  toread-checkpoint.md
2020/: December.html  November.html
2021/: April.html  February.html  January.html  March.html
collections/: cell_types  codigo_bonito
docs/: index.html  last_day.html  notes.html  past_month.html  past_week.html  test.html  this_week.html
mkdocs/: code_of_conduct.md  contributing.md
notes/: Q100395427.md  Q100429893.md  Q100491078.md  Q100491106.md  Q100500142.md  Q100525924.md  Q100526347.md  Q100737318.md  Q100753797.md  Q100766127.md  Q100899356.md  Q101050636.md  Q101051151.md  Q101051356.md  Q101051363.md  Q101086678.md  Q101210731.md  Q101212121.md  Q101212124.md  Q101217428.md  Q101222862.md  Q101226747.md  Q101248419.md  Q101473819.md  Q101556384.md  Q101569793.md  Q101955295.md  Q102043840.md  Q102054102.md  Q102056745.md  (+733 more)
(+1285 files in other folders)
