[metadata]
name = wikidata_bib
version = 0.0.1-dev
description = Read scientific articles using Wikidata
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE

[options]
install_requires =
    inquirer 
    pandas
    pyyaml
    beautifulsoup4
    mdutils
    rdflib
    wbib

zip_safe = false
include_package_data = true

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wikidata_bib = wikidata_bib.cli:cli
